Fix app container's 100vh min height bug on mobile
- Fix 100vh min-height bug on mobile screens (where browser's UI covers part of the page)
- Improve <searchMovies> function to blur the input element upon submitting the search form

--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,6 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* TODO: Make sure this line below works with mobile screens */
-    min-height: 100vh;
     transition: all 0.1s ease-in-out;
 }
 
